
// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "luckycharms.protos.portfolio";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "lucky-charms.proto";

package lucky.charms.protos.portfolio;

// =====================================================================
// =====================================================================
// =====================================================================


message PositionShareDataProto{
    IndexedKeyProto  purchaseDate = 1;
}

message PositionProto {
    string symbol = 1;
    repeated PositionShareDataProto shares = 2;
}

message PortfolioStateProto {
    double cash = 1;
    repeated PositionProto position = 2;
}

message SharePriceProto {
    string symbol = 1;
    google.protobuf.DoubleValue pricePerShare = 2;
}

message PortfolioWorthProto {
    PortfolioStateProto portfolioState = 1;
    repeated SharePriceProto prices = 2;
}
